--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,16 +5,16 @@ permalink: "/contact/"
 comments: false
 ---
 
-<form action="https://formspree.io/{{site.email}}" method="POST">    
-<p class="mb-4">Thank you for your interest in getting in touch with us. Please send your message here. We will reply as soon as possible!</p>
+<form action="https://getform.io/f/0edc9d45-f7d5-466f-b5be-26b15094b977" method="POST">    
+<p class="mb-4">Terima kasih, anda sudah setia bersama ID Tech Channel. Silahkan kirimkan kritik dan saran anda..!</p>
 <div class="form-group row">
 <div class="col-md-6">
-<input class="form-control" type="text" name="name" placeholder="Name*" required>
+<input class="form-control" type="text" name="nama" placeholder="Nama*" required>
 </div>
 <div class="col-md-6">
-<input class="form-control" type="email" name="_replyto" placeholder="E-mail Address*" required>
+<input class="form-control" type="email" name="email" placeholder="E-mail*" required>
 </div>
 </div>
-<textarea rows="8" class="form-control mb-3" name="message" placeholder="Message*" required></textarea>    
-<input class="btn btn-dark" type="submit" value="Send">
+<textarea rows="8" class="form-control mb-3" name="pesan" placeholder="Pesan*" required></textarea>    
+<input class="btn btn-dark" type="submit" value="Kirim">
 </form>
