--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@ background: '/img/bg-index.jpg'
 <!-- Featured
 ================================================== -->
 <section class="row">
+<!-- horizontal -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1794381705838564"
+     data-ad-slot="4999984509"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   {% for post in site.posts %}
       {% if post.featured == true %}
           <div class="col-md-4 mb-5">
@@ -21,6 +31,16 @@ background: '/img/bg-index.jpg'
       {% endif %}
   {% endfor %}
   </div>
+<!-- horizontal -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1794381705838564"
+     data-ad-slot="4999984509"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </section>
 
 <!-- Posts List with Sidebar (except featured)
