--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@ layout: default
   </div>
 </section>
 
+<section class="row">
+<div class="list-group">
+  {% for post in site.posts limit:5 %}
+    <a href="{{ post.url }}" class="list-group-item">{{ post.title }}</a>
+  {% endfor %}
+</div>
+</section>
+
 <!-- Posts List with Sidebar (except featured)
 ================================================== -->
 <section class="row">
